Automate .pot regeneration

--- a/docs/admin/05.get_started/10.providers/10.isp.mdx
+++ b/docs/admin/05.get_started/10.providers/10.isp.mdx
@@ -101,12 +101,12 @@ Tous les fournisseurs d’accès à Internet [membres de la Fédération French 
 
 | Fournisseur d’accès   | Box/routeur          | [UPnP](https://fr.wikipedia.org/wiki/Universal_Plug_and_Play) | [Port 25 ouvrable](/admin/email) | [Hairpinning](http://fr.wikipedia.org/wiki/Hairpinning) | [Reverse DNS](https://en.wikipedia.org/wiki/Reverse_DNS_lookup) personnalisable | [IP fixe](/admin/tutorials/domains/dns_dynamicip)                                       | [Non listé sur le DUL](https://en.wikipedia.org/wiki/Dialup_Users_List) |
 |-----------------------|--------------------------|-------------------------------------------------------------------|--------------------------------------------------------|-------------------------------------------------------------|------------------------------------------------------------------------------------------|---------------------------------------------------------------------|-----------------------------------------------------------------------------|
-| OVH                   | Personnel<br/>ou Box OVH | ✔                                                                 | ✔                                   | ✔                                                           | ✔                                                                                        | ✔                                                                   | …                                                                           |
-| [Free](./free)        | Freebox                  | ✔                                                                 | ✔                                   | ✔                                                           | ✔ (sauf IPv6, pas de support, et buggué sur certaines plages d'adresses ipv4)            | ✔                                                                   | ✘                                                                           |
-| [SFR](./sfr)          | Neufbox                  | ✔                                                                 | ✔                                   | ✔/✘                                                         | …                                                                                        | ✔/✘                                                                 | …                                                                           |
-| [Orange](./orange)    | Livebox                  | ✔                                                                 | ✘                                   | ✔ (depuis la Livebox 4)                                     | ✘ (XXX.pro.dns-orange.fr disponible sur les abonnements orange pro)                      | ✘ (en option depuis la Livebox 3 et sur les abonnements orange pro) | …                                                                           |
-| Bouygues<br/>Télécom  | Bbox                     | ✔                                                                 | ✔                                   | ✔                                                           | ✘                                                                                        | …                                              | …                                                                           |
-| Darty                 | Dartybox                 | ✔                                                                 | ✔                                   | ✔                                                           | ✘                                                                                        | …                                              | …                                                                           |
+| OVH                  | Personnel<br/>ou Box OVH | ✔                                                                 | ✔                                   | ✔                                                           | ✔                                                                                        | ✔                                                                   | …                                                                           |
+| Free                 | Freebox                  | ✔                                                                 | ✔                                   | ✔                                                           | ✔ (sauf IPv6, pas de support, et buggué sur certaines plages d'adresses ipv4)            | ✔                                                                   | ✘                                                                           |
+| SFR                  | Neufbox                  | ✔                                                                 | ✔                                   | ✔/✘                                                         | …                                                                                        | ✔/✘                                                                 | …                                                                           |
+| Orange               | Livebox                  | ✔                                                                 | ✘                                   | ✔ (depuis la Livebox 4)                                     | ✘ (XXX.pro.dns-orange.fr disponible sur les abonnements orange pro)                      | ✘ (en option depuis la Livebox 3 et sur les abonnements orange pro) | …                                                                           |
+| Bouygues<br/>Télécom | Bbox                     | ✔                                                                 | ✔                                   | ✔                                                           | ✘                                                                                        | …                                              | …                                                                           |
+| Darty                | Dartybox                 | ✔                                                                 | ✔                                   | ✔                                                           | ✘                                                                                        | …                                              | …                                                                           |
 
 
 
