Change liberapay link to our donation page / campaign (also to trigger a change and test the pot regen)

--- a/docs/admin/05.get_started/90.guidelines.mdx
+++ b/docs/admin/05.get_started/90.guidelines.mdx
@@ -46,6 +46,6 @@ As an administrator, you should configure an email client to check emails sent t
 
 Finally, keep in mind that YunoHost is a free software maintained by volunteers - and that the goal of YunoHost (to democratize self-hosting) is not an easy one! It is provided without any warranty. The team of volunteers does its best to maintain and provide the best possible experience - yet features, applications and YunoHost as a whole are far from being perfect and you will experience small and big shortcomings at some points. When this happens, kindly [reach for help on the chat or forum, or report the issue](/community/help)! :)
 
-If you like YunoHost and want to see the project being kept alive and make progress, feel free to leave a thank you note and to [donate](https://liberapay.com/YunoHost) to the project and talk about it around you!
+If you like YunoHost and want to see the project being kept alive and make progress, feel free to leave a thank you note and to [donate](https://yunohost.org/donate.html) to the project and talk about it around you!
 
 Last but not least, since YunoHost is a free software project, you are legitimate and welcomed to come and [contribute](/dev/) to the project, be it on the technical aspects (i.e. code) and less-technical aspects (such as contributing to this documentation! ;))
