--- a/docs/admin/05.get_started/20.install_on/arm_board.mdx
+++ b/docs/admin/05.get_started/20.install_on/arm_board.mdx
@@ -35,7 +35,7 @@ Please follow the Armbian documentation first!
 You should download the Armbian **Bookworm** (Debian 12) image from your vendor's or Armbian's website. 
 
 <div class="text--center">
-  <Button url="https://www.armbian.com/download" color="lightblue"><SmallInline url="/img/icons/logo-armbian.png" alt="armbian logo"/> Armbian Download page</Button>
+  <Button url="https://www.armbian.com/download" color="skyblue"><SmallInline url="/img/icons/logo-armbian.png" alt="armbian logo"/> Armbian Download page</Button>
 </div>
 
 <YunoHostImagesList hardware="arm"/>
