--- a/docs/community/10.help.mdx
+++ b/docs/community/10.help.mdx
@@ -26,9 +26,9 @@ Come on [the forum](/community/forum) or the [chat rooms](/community/chat_rooms)
 Please report bugs on our bugtrackers or contact the developers:
 
 <div class="text--center">
-  <Button url="https://github.com/yunohost/issues/issues?target=_blank&classes=btn,btn-lg,btn-warning" color="red"><FAIcon icon='fa-exclamation-circle'/> Report a bug in YunoHost's core</Button>
+  <Button url="https://github.com/yunohost/issues/issues" color="salmon"><FAIcon icon='fa-exclamation-circle'/> Report a bug in YunoHost's core</Button>
   {' '}
-  <Button url="https://github.com/YunoHost-Apps?target=_blank&classes=btn,btn-lg,btn-warning" color="orange"><FAIcon icon='fa-exclamation-circle'/> Report a bug in one of YunoHost's apps</Button>
+  <Button url="https://github.com/YunoHost-Apps" color="orange"><FAIcon icon='fa-exclamation-circle'/> Report a bug in one of YunoHost's apps</Button>
   {' '}
   <Button url="/community/chat_rooms#development-chat-room" color="lightblue"><FAIcon icon='fa-comment'/> Contact the developers</Button>
 </div>
