--- a/docs/admin/05.get_started/20.install_on/on_top_of_debian.mdx
+++ b/docs/admin/05.get_started/20.install_on/on_top_of_debian.mdx
@@ -22,7 +22,7 @@ You should download the version **Bookworm** (Debian 12) and select the architec
 When in doubt, select `amd64`, or `i386` for a pre-2010 PC.
 
 <div class="text--center">
-  <Button url="https://www.debian.org/distrib/netinst" color="lightblue"><SmallInline url="/img/icons/logo-debian.png" alt="Debian logo"/> Debian Download page</Button>
+  <Button url="https://www.debian.org/distrib/netinst" color="skyblue"><SmallInline url="/img/icons/logo-debian.png" alt="Debian logo"/> Debian Download page</Button>
 </div>
 
 Alternatively, you can browse the [Debian archive](https://cdimage.debian.org/mirror/cdimage/archive) for the latest 12.x version, select your architecture, the select `iso-cd` and download the `netinst` iso.
