Point to translation doc from the doc doc and vice-versa

--- a/docs/dev/10.doc.mdx
+++ b/docs/dev/10.doc.mdx
@@ -56,8 +56,7 @@ npm run start
 
 - The **actual documentation content** is inside the `docs/` folder, for example `docs/admin/02.what_is_yunohost/index.mdx` is the "What is YunoHost" page.
 - **Images** are in `static/img`
-- **Translations** are inside `i18n` folders, for example the "What is YunoHost" page translated to french is in `i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx`
-
+- **Translations** are inside `i18n` folders, in particular `.po`/`.pot` files are regenerated automatically using the `po4a` software. Refer to the dedicated page about [🌐 Working on translations](/dev/translation) for more info.
 
 ## Special pages
 
