--- a/docs/dev/20.translation.mdx
+++ b/docs/dev/20.translation.mdx
@@ -38,7 +38,7 @@ Currently, only the "admin" section of the documentation is translatable, though
 
 Under the hood, the documentation is written using Markdown [here](https://github.com/YunoHost/doc/tree/main/docs/admin). We use **[po4a](https://www.po4a.org/)** to extract strings out of the `.mdx`, into standard`.po`/`.pot` files, plugged in Weblate, and vice-versa.
 
-You are welcome to also improve the [source pages](https://github.com/YunoHost/doc/tree/main/docs/admin), but this requires to use Git/GitHub.
+You are welcome to also improve the [source pages](https://github.com/YunoHost/doc/tree/main/docs/admin), but this requires to use Git/GitHub. Refer to the dedicated page [📝 Working on the documentation](/dev/doc) for more info.
 
 ## ✨ Project website and app store
 
