--- a/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
@@ -2,16 +2,16 @@
 title: Besoin d’aide ?
 ---
 
-## How to ask for help
+## Comment demander de l'aide
 
 <Columns> 
   <Column className='text--left'>
   
     :::tip
-    - **Be courteous**: help in the chatrooms or on the forum is given by our users and contributors, all volunteers.
-    - **Explain the context** of your request in a complete but concise way.
-    - It is paramount to **share the error logs with YunoPaste** (green buttons in your webadmin, then share the link to the generated page).
-    - **Be patient**, as your messages might not be seen instantly.
+    - **Soyez courtois**: l'aide apportée dans les salons de discussion ou sur le forum est fournie par nos utilisateurs et contributeurs, tous bénévoles.
+    - **Expliquez le contexte** de votre demande de manière complète mais concise.
+    - Il est primordial de **partager les journaux d'erreurs avec YunoPaste** (boutons verts dans votre webadmin, puis partagez le lien vers la page générée).
+    - **Soyez patient**, car vos messages peuvent ne pas être vus instantanément.
     :::
 
   </Column>
