--- a/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
@@ -18,10 +18,10 @@ title: Besoin d’aide ?
   <Column className='text--left'>
 
     :::danger
-    - Do not ask about your attempted solution but rather your actual problem (see [XY problem](https://xyproblem.info/)).
-    - Avoid phrases like "server does not want", "the app does not load", or other meaningless sentences.
-    - Do not trim error messages, but do not paste a wall of illegible unformatted code either. (Use [YunoPaste](https://paste.yunohost.org))
-    - Do not ask your question like a poll ("does anyone else succeeded in...?").
+    - Ne posez pas de questions sur la solution que vous avez essayée, mais plutôt sur votre problème réel (voir [problème XY](https://xyproblem.info/)).
+    - Évitez les phrases telles que « le serveur ne veut pas », « l'application ne se charge pas » ou d'autres phrases dénuées de sens.
+    -  Ne raccourcissez pas les messages d'erreur, mais ne collez pas non plus un mur de code illisible et non formaté. (Utilisez [YunoPaste](https://paste.yunohost.org))
+    - Ne posez pas votre question sous forme de sondage (« quelqu'un d'autre a-t-il réussi à... ? »).
     :::
 
   </Column>
