Translate support chatroom and forum instructions to French
Translated support chatroom instructions and forum guidance into French.

--- a/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
@@ -27,9 +27,9 @@ title: Besoin d’aide ?
   </Column>
 </Columns>
 
-## Connect to the support chatroom
+## Connectez-vous au salon de discussion d'assistance
 
-Please change your username, as we got legions of `ynhuser`s.
+Merci de changer votre nom d'utilisateur, car nous avons beaucoup d'utilisateurs *ynhuser*s.
 
 {/* FIXME:
 <!-- [center]
@@ -37,20 +37,20 @@ Please change your username, as we got legions of `ynhuser`s.
 [/center] --> */}
 
 :::tip
-this room is available via
-- Matrix (`#yunohost:matrix.org` [using Element](https://riot.im/app/#/room/#yunohost:matrix.org?target=_blank))
-- IRC (`#yunohost` on libera.chat, [using kiwiirc](https://web.libera.chat/#yunohost))
+Ce salon de discussion est disponibles via
+- Matrix (`#yunohost:matrix.org` [en utilisant Element](https://riot.im/app/#/room/#yunohost:matrix.org?target=_blank))
+- IRC (`#yunohost` avec libera.chat, [en utilisant kiwiirc](https://web.libera.chat/#yunohost))
 - XMPP (`support@conference.yunohost.org`)
 :::
 
-**NB : Actuellement, le bridge IRC ([grace à Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) est désactivé. Ainsi, alors que les canaux XMPP et Matrix sont connectés, le canal IRC ne l'est pas**.
+**NB : Actuellement, le bridge IRC ([grace à Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) est désactivé. Alors que les canaux XMPP et Matrix sont connectés, le canal IRC ne l'est pas**.
 
-## ... or ask on the forum!
+## ... ou demandez sur le forum!
 
-Please follow the Support section post template. It helps everyone understand the context of your request.
+Merci de suivre le modèle de publication de la section Assistance. Cela aide tout le monde à comprendre le contexte de votre demande.
 
 <div class="text--center">
-<Button url="https://forum.yunohost.org/?target=_blank&classes=btn,btn-lg,btn-success" color="green"><FAIcon icon='fa-comment'/> Go to the forum</Button>
+<Button url="https://forum.yunohost.org/?target=_blank&classes=btn,btn-lg,btn-success" color="green"><FAIcon icon='fa-comment'/> Allez sur le forum</Button>
 </div>
 
 ## You've found a bug ?
