Translate bug section to French

--- a/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
@@ -53,16 +53,16 @@ Merci de suivre le modèle de publication de la section Assistance. Cela aide to
 <Button url="https://forum.yunohost.org/?target=_blank&classes=btn,btn-lg,btn-success" color="green"><FAIcon icon='fa-comment'/> Allez sur le forum</Button>
 </div>
 
-## You've found a bug ?
+## Vous avez trouvé un bug ?
 
 :::tip
-Please report bugs on our bugtrackers or contact the developers
+Merci de signaler les bugs sur nos outils de suivi des bug ou contacter les développeurs.
 :::
 
 <div class="text--center">
-  <Button url="https://github.com/yunohost/issues/issues?target=_blank&classes=btn,btn-lg,btn-warning" color="red"><FAIcon icon='fa-exclamation-circle'/> Report a bug in YunoHost's core</Button>
+  <Button url="https://github.com/yunohost/issues/issues?target=_blank&classes=btn,btn-lg,btn-warning" color="red"><FAIcon icon='fa-exclamation-circle'/> Signaler un bug dans YunoHost</Button>
   {' '}
-  <Button url="https://github.com/YunoHost-Apps?target=_blank&classes=btn,btn-lg,btn-warning" color="orange"><FAIcon icon='fa-exclamation-circle'/> Report a bug in one of YunoHost's apps</Button>
+  <Button url="https://github.com/YunoHost-Apps?target=_blank&classes=btn,btn-lg,btn-warning" color="orange"><FAIcon icon='fa-exclamation-circle'/> Signaler un bug dans une application YunoHost</Button>
   {' '}
-  <Button url="https://web.libera.chat/#yunohost-dev&classes=btn,btn-lg,btn-warning" color="lightblue"><FAIcon icon='fa-comment'/> Contact the developers</Button>
+  <Button url="https://web.libera.chat/#yunohost-dev&classes=btn,btn-lg,btn-warning" color="lightblue"><FAIcon icon='fa-comment'/> Contacter les développeurs</Button>
 </div>
