Fix formatting and phrasing in help documentation

--- a/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/community/10.help.mdx
@@ -20,7 +20,7 @@ title: Besoin d’aide ?
     :::danger
     - Ne posez pas de questions sur la solution que vous avez essayée, mais plutôt sur votre problème réel (voir [problème XY](https://xyproblem.info/)).
     - Évitez les phrases telles que « le serveur ne veut pas », « l'application ne se charge pas » ou d'autres phrases dénuées de sens.
-    -  Ne raccourcissez pas les messages d'erreur, mais ne collez pas non plus un mur de code illisible et non formaté. (Utilisez [YunoPaste](https://paste.yunohost.org))
+    - Ne raccourcissez pas les messages d'erreur, mais ne collez pas non plus un mur de code illisible et non formaté. (Utilisez [YunoPaste](https://paste.yunohost.org))
     - Ne posez pas votre question sous forme de sondage (« quelqu'un d'autre a-t-il réussi à... ? »).
     :::
 
@@ -29,7 +29,7 @@ title: Besoin d’aide ?
 
 ## Connectez-vous au salon de discussion d'assistance
 
-Merci de changer votre nom d'utilisateur, car nous avons beaucoup d'utilisateurs *ynhuser*s.
+Merci de changer votre nom d'utilisateur, car nous avons beaucoup d'utilisateurs `ynhuser`s.
 
 {/* FIXME:
 <!-- [center]
@@ -43,7 +43,7 @@ Ce salon de discussion est disponibles via
 - XMPP (`support@conference.yunohost.org`)
 :::
 
-**NB : Actuellement, le bridge IRC ([grace à Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) est désactivé. Alors que les canaux XMPP et Matrix sont connectés, le canal IRC ne l'est pas**.
+**NB : Actuellement, la passerelle IRC ([grace à Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) est désactivé. Alors que les canaux XMPP et Matrix sont connectés, le canal IRC ne l'est pas**.
 
 ## ... ou demandez sur le forum!
 
@@ -56,7 +56,7 @@ Merci de suivre le modèle de publication de la section Assistance. Cela aide to
 ## Vous avez trouvé un bug ?
 
 :::tip
-Merci de signaler les bugs sur nos outils de suivi des bug ou contacter les développeurs.
+Merci de signaler les bugs sur nos outils de suivi de bug ou de contacter les développeurs.
 :::
 
 <div class="text--center">
